# couchbase-lite-cpp

./: .gitattributes  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/fleece/: CMakeLists.txt  fleece.cpp
examples/sgcouchbaselite/: CMakeLists.txt  sgcouchbaselite-buckets.cpp  sgcouchbaselite-playground.cpp  sgcouchbaselite.cpp  sgloggingcategories.cpp  sgloggingcategories.h
include/: SGAuthenticator.h  SGBucketManager.h  SGCouchBaseLite.h  SGDatabase.h  SGDocument.h  SGFleece.h  SGLogging.h  SGLoggingCategories.h  SGMutableDocument.h  SGPath.h  SGReplicator.h  SGReplicatorConfiguration.h  SGURLEndpoint.h  SGUtility.h
patches/: civetweb-diff.patch  couchbase-lite-core_vendor_mbedtls_fix.patch  litecore-diff.patch
src/: SGBasicAuthenticator.cpp  SGBucketManager.cpp  SGDatabase.cpp  SGDocument.cpp  SGLoggingCategories.cpp  SGMutableDocument.cpp  SGPath.cpp  SGReplicator.cpp  SGReplicatorConfiguration.cpp  SGURLEndpoint.cpp  SGUtility.cpp
